# telegram-bot-testing-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/miniapp/: index.html
docs/superpowers/plans/: 2026-07-13-telegram-user-mcp.md
docs/superpowers/specs/: 2026-07-13-telegram-user-adapter-design.md
e2e/: create_fixture_bot.py  fixture_bot.py  run_scenarios.py  test_headless_login.py
e2e/dogfood/: buggy_bot.py  create_bot_mcp.py  qa_scenario.py
spike/: all_rows_dump.py  assisted_test_login.py  dom_recon.py  login_sweep.py  login_test_dc.py  miniapp_probe.py  open_chat_debug3.py  open_chat_probe.py  open_chat_probe2.py  row_dump.py  send_state_probe.py  start_button_probe.py  telethon_probe.py  telethon_sweep.py  three_bugs_probe.py  topbar_dump.py
src/telegram_user_mcp/: cli.py  config.py  errors.py  extract.py  js.py  miniapp.py  selectors.py  server.py  session.py  telegram.py  timings.py
tests/: test_config.py  test_errors.py  test_extract.py  test_server.py
tests/fixtures/: bubbles.html
