[project]
name = "telegram-bot-testing-mcp"
version = "0.1.0"
description = "Let AI agents test Telegram bots and Mini Apps as a real user: MCP server driving the official Telegram Web client in a real browser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2", "playwright>=1.49"]

[project.scripts]
telegram-bot-testing-mcp = "telegram_user_mcp.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_user_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
